JCR-5154 Remove deprecated Class.newInstance()